# nrich

./: .gitignore  LICENSE.md  README.md  file.nix  flake.nix  nrich.nix  nrich.py  parse_internetdb.py  pyproject.toml  result
.github/workflows/: release.yaml
scripts/: publish.sh
src/nrich/: __init__.py  __main__.py  models.py  nrich.py  parse_internetdb.py
